Tue Feb 28 18:06:12 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Actually hook up "show colors" option.

Tue Feb 28 15:38:40 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	  - Pop the list up 10 pixels to the right of the mouse button, rather
	    than 100 pixels to the left.  This should prevent the pop-up
	    overlapping the "Users" button in all but the most pathological
	    cases, for users who don't realize that they can click anywhere
	    rather than only on the button.

Tue Feb 28 15:32:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/plugins.c:
	  - Guard against loading plugins multiple times (#328907)

Tue Feb 28 15:09:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Fix output when checking for libnotify

Tue Feb 28 05:48:41 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	  - Only send part messages when a channel is being left (rather than
	    closed), since the core was sending one as well.  This fixes the
	    spurious "You're not on that channel" messages. (#332041)

Fri Feb 24 15:09:56 MST 2006  Brian Pepple <bdpepple@gmail.com>

	* plugins/autoaway/gscreensaver.c:
	  - Update for new gnome-screensaver object ID.

Fri Feb 24 05:12:34 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.11svn

==================== 0.10 ====================

Fri Feb 24 04:57:20 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* Makefile.am:
	  - Fix distcheck problems introduced by gnome-doc-utils.

Fri Feb 24 03:06:43 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump to 0.10

Fri Feb 24 11:01:13 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Help is now working. Big thanks to seb128 for the fix. (#330837)

Thu Feb 23 16:15:41 MST 2006  David Trowbridge <trowbrds@gmail.com>
